feat: add autotz cron, remove batt and dfh crons

--- a/roles/functions/tasks/darwin.yml
+++ b/roles/functions/tasks/darwin.yml
@@ -58,17 +58,12 @@
     env: yes
     job: /bin/zsh
 
-- name: Setup cron for batt
+- name: Setup cron for autotz
   ansible.builtin.cron:
-    name: Batt cron
-    minute: "0,15,30,45"
-    job: ". $HOME/.zshrc; batt cron"
-
-- name: Setup cron for dfh
-  ansible.builtin.cron:
-    name: dfh cron
-    minute: "0,15,30,45"
-    job: ". $HOME/.zshrc; dfh cron"
+    name: autotz cron
+    hour: "5,8,20"
+    minute: "0"
+    job: ". $HOME/.zshrc; autotz"
 
 - name: Setup cron for appcount
   ansible.builtin.cron:
