feat: add feature to reset orb once a week to free up space

--- a/roles/functions/tasks/darwin.yml
+++ b/roles/functions/tasks/darwin.yml
@@ -72,3 +72,11 @@
     hour: "16"
     minute: "31"
     job: ". $HOME/.zshrc; apps cron"
+
+- name: Setup cron for orb reset
+  ansible.builtin.cron:
+    name: orb reset cron
+    weekday: "6"
+    hour: "7"
+    minute: "0"
+    job: ". $HOME/.zshrc; orb reset"
