--- a/roles/functions/tasks/darwin.yml
+++ b/roles/functions/tasks/darwin.yml
@@ -61,7 +61,7 @@
 - name: Setup cron for autotz
   ansible.builtin.cron:
     name: autotz cron
-    hour: "5,7,20"
+    hour: "*"
     minute: "07"
     user: "{{ macbook_user.stdout }}"
     job: '/bin/zsh -c "source $HOME/.zsh/timezone.zsh; autotz"'
