feat: general update of functions and roles
- Add brew packages: lima, glow, n, repomix, podman, autossh, act, doppler, stripe, wireguard-tools, python, ripgrep, neonctl
- Add cask apps: rar
- Add npm package: surge
- Add zsh functions: vpn, re, window, claudewright, highest, grk
- Add paths.zsh for PATH management
- Update repo function in git.zsh
- Update main.zsh with chpwd, auto-pull, killport, venv functions
- Update macfair.zsh with dynamic location detection
- Add git amend alias, update ignore patterns
- Remove autotz cron, timezone.zsh (no longer needed)
- Remove VSCode auto-copy from pre-commit hook
- Update templates: Makefile, README, release workflow
- Add makefiles/ directory with modular .mk files
- Add GitHub Actions templates for vitest/playwright with drizzle/prisma
- Add Vercel deployment to release workflow
- Add makefile templates: audit, playwright, shadcn, vercel, vitest
- Add sshs and makefile shell functions
- Add Ansible tasks for Claude Code config
- Optimize VSCode extension installation with pre-check
- Replace yarn with pnpm, remove unused packages

--- a/files/templates/Makefile
+++ b/files/templates/Makefile
@@ -1,6 +1,41 @@
+SHELL := /bin/bash
+MAKEFLAGS += --no-print-directory
+
+PORT ?= 6150
+
+.DEFAULT_GOAL := tldr
+
+.PHONY: tldr dev build stop install
+
 tldr:
-	@echo Available commands
-	@echo ------------------
-	@grep '^[[:alpha:]][^:[:space:]]*:' Makefile | cut -d ':' -f 1 | sort -u | sed 's/^/make /'
+	@$(MAKE) info
+	@echo ""
+	@$(MAKE) _commands
+
 %:
-	@$(MAKE) tldr
+	@$(MAKE) _commands
+
+dev:
+	@[[ -d node_modules ]] || { echo "📦 node_modules not found, running install..."; $(MAKE) install; }
+	@pnpm dev
+
+build:
+	@echo "Building application..."
+	pnpm build
+
+stop:
+	-@pid=$$(lsof -ti :$(PORT) 2>/dev/null); \
+	[[ -z "$$pid" ]] && echo "No process running on port $(PORT)" || { echo "Stopping process on port $(PORT) (PID: $$pid)..."; kill $$pid; }
+
+install:
+	@echo "Installing dependencies with pnpm..."
+	@command -v pnpm >/dev/null 2>&1 || { echo "pnpm is not installed. Installing pnpm..."; npm install -g pnpm; }
+	NODE_ENV=development pnpm install
+	@[[ ! -f prisma/schema.prisma ]] || pnpm prisma generate
+	@echo "✅ Installation complete! Run 'make dev' to start the development server."
+
+.env .env.test: ;
+makefiles/%.mk: ;
+-include .env
+-include makefiles/*.mk
+
