feat: add db functions, claude skills, post-checkout hook

--- a/roles/functions/tasks/main.yml
+++ b/roles/functions/tasks/main.yml
@@ -63,12 +63,21 @@
     path: "~{{ macbook_user.stdout }}/.claude"
     state: directory
   when: ansible_os_family == "Darwin"
+  tags: claude
 
 - name: Copy CLAUDE.md
   copy:
     src: claude/config.md
     dest: ~{{ macbook_user.stdout }}/.claude/CLAUDE.md
   when: ansible_os_family == "Darwin"
+  tags: claude
+
+- name: Copy Claude skills
+  copy:
+    src: claude/skills/
+    dest: ~{{ macbook_user.stdout }}/.claude/skills/
+  when: ansible_os_family == "Darwin"
+  tags: claude
 
 - name: print role name
   set_fact:
