feat: add diskspace cleanup role and cron
 - adds diskspace cleanup role
 - adds a cron to monitor diskspace and cleanup where necessary
 - modularize the main Makefile by creating a separate roles makefile
 - tell claude to prefer no hyphens in filenames unless strictly necessary§

--- a/roles/functions/tasks/darwin.yml
+++ b/roles/functions/tasks/darwin.yml
@@ -1,8 +1,10 @@
 ---
-- name: Copy darwin
+- name: Copy darwin-specific zsh files
   copy:
-    src: zsh/darwin.zsh
-    dest: ~{{ macbook_user.stdout }}/.zsh/darwin.zsh
+    src: "{{ item }}"
+    dest: "~{{ macbook_user.stdout }}/.zsh/"
+  with_fileglob:
+    - zsh/darwin/*.zsh
 
 - name: create empty tokens file only if one doesnt already exist
   copy:
