--- a/setup.yml
+++ b/setup.yml
@@ -27,6 +27,7 @@
     - { role: vscode, tags: [vscode, setup, info] }
     - { role: desktop, tags: [desktop, setup, info] }
     - { role: keepalive, tags: [keepalive, functions, setup, info] }
+    - { role: diskspace, tags: [diskspace, functions, setup, info] }
 
 - name: After everything
   hosts: localhost
