feat: add Claude Code hooks with location state and diary system
Add four Claude Code hooks:
- celeste.ts: Session context with daily location state tracking
- security-validator.ts: Bash command security validation
- update-tab-titles.ts: Terminal tab title updates based on task
- pre-compact.sh: Session summary with git state and diary trigger

Location state persists in ~/.claude/MEMORY/State/ and prompts once per day.
Pre-compact hook creates tmp/summary-*.md files and warns to exit before context degrades.

Experimental ruben namespace (~/.claude/ruben/) provides diary/reflect commands for session documentation and pattern analysis. Available via 'make ruben' when ready to use.

Also adds Bun to install packages and updates testing guidelines for subagent usage.

--- a/roles/functions/tasks/darwin.yml
+++ b/roles/functions/tasks/darwin.yml
@@ -6,6 +6,11 @@
   with_fileglob:
     - zsh/darwin/*.zsh
 
+- name: Copy MCP functions
+  copy:
+    src: zsh/mcp.zsh
+    dest: "~{{ macbook_user.stdout }}/.zsh/mcp.zsh"
+
 - name: create empty tokens file only if one doesnt already exist
   copy:
     content: ""
