feat: add claude-stt voice input and improve claude statusline
- Install claude-stt plugin with Karabiner Fn key mapping
- Add karabiner-elements and opensuperwhisper casks
- Statusline shows percentage against 155K compaction limit
- Red warning mode when compaction is imminent
- Stop removing podman machine during disk cleanup
- Add permissions.deny to block reading sensitive files

--- a/roles/install/tasks/darwin.yml
+++ b/roles/install/tasks/darwin.yml
@@ -94,6 +94,8 @@
     - "google-chrome"
     - "chromium"
     - "rar"
+    - "karabiner-elements"
+    - "opensuperwhisper"
 
 - name: Copy zshenv
   copy:
