feat: add GSD workflow, Playwright MCP, and shell improvements
- Add Playwright MCP server globally
- Block git push in security-validator
- Add gsd.zsh with Get Shit Done workflow commands
- Install GSD via npx in claude.yml
- Add TypeScript type inference guidance to config.md
- Add catn, vimn, treeg, treel shell utilities
- Add pnpm-audit daily cron job
- Add repobar brew cask
- Fix post-checkout hook exit code

--- a/roles/terminal/tasks/darwin.yml
+++ b/roles/terminal/tasks/darwin.yml
@@ -36,3 +36,15 @@
     src: iterm.json.j2
     dest: ~{{ macbook_user.stdout }}/Library/Application Support/iTerm2/DynamicProfiles/iterm.json
   when: iterm_path.stat.exists
+
+- name: Create pnpm-audit directory
+  file:
+    path: "{{ ansible_env.HOME }}/work/crons/pnpm-audit"
+    state: directory
+    mode: "0755"
+
+- name: Copy pnpm-audit script
+  copy:
+    src: pnpm-audit/daily-pnpm-audit.sh
+    dest: "{{ ansible_env.HOME }}/work/crons/pnpm-audit/daily-pnpm-audit.sh"
+    mode: "0755"
