feat: add db alias and improve claude settings
- Add db alias to list database shell functions
- Allow playwright browser_navigate, browser_click, browser_take_screenshot
- Add post-review diary prompt for capturing learnings from PRs
- Move /diary command from ruben namespace to main commands

--- a/roles/ruben/tasks/main.yml
+++ b/roles/ruben/tasks/main.yml
@@ -11,10 +11,10 @@
     - hooks
   tags: ruben
 
-- name: Install diary command to ruben namespace
+- name: Install diary command to main commands directory
   copy:
     src: commands/diary.md
-    dest: "~{{ macbook_user.stdout }}/.claude/ruben/commands/"
+    dest: "~{{ macbook_user.stdout }}/.claude/commands/"
     mode: 0644
   tags: ruben
 
