feat: add server hardening (SSH tunnel, UFW, debian provisioning)
- Add SSH tunnel role with restricted key-based access
- Configure UFW firewall (deny incoming, allow SSH/HTTP/HTTPS)
- Harden debian provisioning (Node 22, docker repo fix, apt cleanup)
- Add Ubuntu LTS upgrade playbook
- Remove stale rails source lines from zshrc on both platforms

--- a/roles/functions/tasks/darwin.yml
+++ b/roles/functions/tasks/darwin.yml
@@ -33,22 +33,11 @@
     path: ~/.zshrc
     line: export PATH="/.pyvenv-ansible/bin:$PATH"
 
-- name: register rbenv exists
-  stat:
-    path: ~{{ macbook_user.stdout }}/.rbenv/bin/rbenv
-  register: rbenv
-
-- name: Conditionally Copy zsh rails
-  copy:
-    src: zsh/rails.zsh
-    dest: ~{{ macbook_user.stdout }}/.zsh/rails.zsh
-  when: rbenv.stat.exists
-
-- name: Conditionally Add rails to zshrc.
+- name: Remove stale rails source line from zshrc
   lineinfile:
     path: ~/.zshrc
     line: source $HOME/.zsh/rails.zsh
-  when: rbenv.stat.exists
+    state: absent
 
 - name: import dnsmasq.yml
   import_tasks: dnsmasq.yml
