--- a/roles/install/tasks/docker.yml
+++ b/roles/install/tasks/docker.yml
@@ -16,14 +16,38 @@
       - software-properties-common
     state: present
 
+- name: Create keyrings directory
+  file:
+    path: /etc/apt/keyrings
+    state: directory
+    mode: '0755'
+
 - name: Add Docker GPG key
-  apt_key:
+  get_url:
     url: https://download.docker.com/linux/{{ os.stdout | lower }}/gpg
-    state: present
+    dest: /etc/apt/keyrings/docker.asc
+    mode: '0644'
+
+- name: Get dpkg architecture
+  command: dpkg --print-architecture
+  register: dpkg_arch
+  changed_when: false
+
+- name: Remove old unsigned Docker source
+  file:
+    path: /etc/apt/sources.list.d/download_docker_com_linux_ubuntu.list
+    state: absent
+
+- name: Remove incorrect x86_64 Docker source line
+  apt_repository:
+    repo: deb [arch={{ ansible_architecture }} signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/{{ os.stdout | lower }} {{ ansible_distribution_release }} stable
+    filename: docker
+    state: absent
 
 - name: Add Docker repository
   apt_repository:
-    repo: deb [arch={{ ansible_architecture }}] https://download.docker.com/linux/{{ os.stdout | lower }} {{ ansible_distribution_release }} stable
+    repo: deb [arch={{ dpkg_arch.stdout }} signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/{{ os.stdout | lower }} {{ ansible_distribution_release }} stable
+    filename: docker
     state: present
 
 - name: Install Docker
