feat: add agent provisioning and infrastructure
- Add agent role with podman container deployment and nginx proxy
- Add cyrus role for pm2 and cyrus-ai global installs
- Add vault secrets for agent API keys and tokens
- Configure SSL via certbot with auto-renewal detection
- Add brew packages (nightshift, td, sidecar) for local dev
- Use shell module for container restart handler

--- a/setup.yml
+++ b/setup.yml
@@ -20,6 +20,8 @@
     - { role: terminal, tags: [debian] }
     - { role: functions, tags: [debian] }
     - { role: nginx, tags: [debian, nginx] }
+    - { role: tunnel, tags: [debian, tunnel] }
+    - { role: agent, tags: [debian, agent] }
 
 - name: Setup macbook
   hosts: macbook
