--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,4 @@ hostfile = hosts
 interpreter_python = auto_silent
 host_key_checking = False
 remote_tmp = /tmp/.ansible-${USER}/tmp
+vault_password_file = ~/.vault_pass
