--- a/roles/install/tasks/darwin.yml
+++ b/roles/install/tasks/darwin.yml
@@ -56,6 +56,9 @@
         "semgrep",
         "shellcheck",
         "librsvg",
+        "marcus/tap/nightshift",
+        "marcus/tap/td",
+        "marcus/tap/sidecar",
         ]
     state: present
 
