--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,9 @@ jobs:
           source ~/.pyvenv-ansible/bin/activate
           pip install ansible
 
+      - name: Create dummy vault password file
+        run: echo "dummy" > ~/.vault_pass
+
       - name: Install ansible requirements
         run: |
           source ~/.pyvenv-ansible/bin/activate
