--- a/roles/agent/handlers/main.yml
+++ b/roles/agent/handlers/main.yml
@@ -5,7 +5,7 @@
     state: reloaded
   become: true
 
-- name: Restart claude-agent
-  shell: podman-compose down && podman-compose up -d
+- name: Restart claude-agent # Runs as deploy user with rootless Podman (see: loginctl enable-linger in setup)
+  shell: podman-compose down || true; podman-compose up -d
   args:
     chdir: "{{ agent_deploy_dir }}"
