--- a/roles/tunnel/tasks/main.yml
+++ b/roles/tunnel/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Create tunnel user
   user:
     name: tunnel
-    shell: /usr/sbin/nologin
+    shell: /bin/bash
     create_home: yes
   become: true
 
