fix: harden infrastructure scripts and prevent stale handoff reuse
- Rename handoff.md to .consumed.md after reading to prevent stale context injection
- Guard git symbolic-ref in statusline against pipefail exit
- Flush nginx handlers before certbot to ensure config is live
- Add ufw to apt install list before firewall rules run
- Move update-manager-core install before do-release-upgrade check

--- a/roles/agent/tasks/main.yml
+++ b/roles/agent/tasks/main.yml
@@ -44,6 +44,9 @@
       become: true
       changed_when: false
 
+    - name: Flush handlers before certbot
+      meta: flush_handlers
+
     - name: Obtain SSL certificate for kawajevo
       shell: "/snap/bin/certbot --nginx -n --agree-tos --email {{ agent_certbot_email }} -d {{ agent_domain }}"
       become: true
