--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,15 @@ jobs:
           source ~/.pyvenv-ansible/bin/activate
           pip install ansible
 
+      - name: Create dummy vault password and secrets for CI
+        run: |
+          echo "dummy" > ~/.vault_pass
+          cat > group_vars/all/vault.yml << 'EOF'
+          vault_github_token: dummy
+          vault_linear_api_key: dummy
+          vault_linear_webhook_secret: dummy
+          EOF
+
       - name: Install ansible requirements
         run: |
           source ~/.pyvenv-ansible/bin/activate
