feat: modularize SSH config, provision stolac, and harden root login
- Add SSH conf.d role with stale file cleanup for managed config deployment
- Consolidate server entries into 10_servers.conf with tunnels and services
- Remove stale Picfair and dead kawajevo root entries
- Add stolac host vars and Debian 13 compatibility for certbot/packages
- Disable root SSH login on managed servers after verifying deploy can sudo
- Fix sshd service name to ssh for Ubuntu compatibility
- Add hosts inventory with macbook, debian, and sites groups

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,11 @@ jobs:
           source ~/.pyvenv-ansible/bin/activate
           ansible-galaxy collection install -r requirements.yml
 
+      - name: Replace tracked files with CI-safe versions
+        run: |
+          printf '[macbook]\n\n[debian]\n\n[sites]\n' > hosts
+          printf 'users:\nroot:\n' > host_vars/localhost.yml
+
       - name: makes this target
         run: |
           source ~/.pyvenv-ansible/bin/activate
